--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
    
   </dependencies>
   <build>
-    <finalName>oraganic food</finalName>
+    <finalName>oraganic-food</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
